Wall of Fame is Responsive

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1018,6 +1018,7 @@
   Section#gallery-hero
   Section#sponsor-hero
   Section#alumni-hero
+  Section#wof-hero
  =========================================================================================================================
 */
 
@@ -1025,14 +1026,16 @@
   #about-hero p,
   #gallery-hero p:nth-child(1),
   #sponsor-hero p:nth-child(1),
-  #alumni-hero p:nth-child(1) {
+  #alumni-hero p:nth-child(1),
+  #wof-hero p:nth-child(1) {
     font-size: 0.9rem;
   }
 
   #about-hero h1,
   #gallery-hero h1,
   #sponsor-hero h1,
-  #alumni-hero h1 {
+  #alumni-hero h1,
+  #wof-hero h1 {
     font-size: 2.5rem;
   }
 
@@ -1043,7 +1046,8 @@
 
   #gallery-hero p:nth-child(3),
   #sponsor-hero p:nth-child(3),
-  #alumni-hero p:nth-child(3) {
+  #alumni-hero p:nth-child(3),
+  #wof-hero p:nth-child(3) {
     font-size: 0.9rem;
   }
 }
@@ -1052,14 +1056,16 @@
   #about-hero,
   #gallery-hero,
   #sponsor-hero,
-  #alumni-hero {
+  #alumni-hero,
+  #wof-hero {
     min-height: 300px;
     justify-content: center;
   }
 
   #gallery-hero p:nth-child(3),
   #sponsor-hero p:nth-child(3),
-  #alumni-hero p:nth-child(3) {
+  #alumni-hero p:nth-child(3),
+  #wof-hero p:nth-child(3) {
     max-width: 90%;
   }
 }
@@ -1068,7 +1074,8 @@
   #about-hero h1,
   #gallery-hero h1,
   #sponsor-hero h1,
-  #alumni-hero h1 {
+  #alumni-hero h1,
+  #wof-hero h1 {
     font-size: 1.5rem;
   }
 
@@ -1081,7 +1088,8 @@
   #about-hero,
   #gallery-hero,
   #sponsor-hero,
-  #alumni-hero {
+  #alumni-hero,
+  #wof-hero {
     padding: calc(3rem + var(--header-height)) 10px 3rem;
   }
 }
@@ -1913,31 +1921,63 @@
 /* 
  =========================================================================================================================
   Section#alumni-people
+  Section#wof-people
  =========================================================================================================================
 */
 
 @media (max-width: 1400px) {
-  #alumni-people .container {
+  #alumni-people .container,
+  #wof-people .container {
     padding: 1rem 2rem;
+  }
+
+  #wof-people h1 {
+    font-size: 24px;
   }
 }
 
 @media (max-width: 1200px) {
-  #alumni-people .container {
+  #alumni-people .container,
+  #wof-people .wof-cards {
     padding: 0;
     gap: 1rem;
   }
 }
 
 @media (max-width: 992px) {
-  #alumni-people .container {
+  #alumni-people .container,
+  #wof-people .wof-cards {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 576px) {
-  #alumni-people .container {
+  #alumni-people .container,
+  #wof-people .wof-cards {
     padding: 10px;
     grid-template-columns: 1fr;
+  }
+}
+
+/* 
+ =========================================================================================================================
+  Section#wof-year
+ =========================================================================================================================
+*/
+
+@media (max-width: 992px) {
+  #wof-year .container {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 768px) {
+  #wof-year .container div {
+    padding: 0.5rem;
+  }
+
+  #wof-year select,
+  #wof-year option {
+    font-size: 0.9rem;
   }
 }
