--- a/css/style.css
+++ b/css/style.css
@@ -2901,7 +2901,7 @@ footer a {
 
 /* 
  =========================================================================================================================
-  Section#alumni-hero
+  Section#wof-hero
  =========================================================================================================================
 */
 
