Animation Added in Home Page for Test

--- a/css/utility.css
+++ b/css/utility.css
@@ -44,6 +44,10 @@
   font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* 
  =========================================================================================================================
   Button
