--- a/css/utility.css
+++ b/css/utility.css
@@ -48,6 +48,11 @@ body {
   overflow-x: hidden;
 }
 
+section {
+  max-width: 100%;
+  overflow: hidden;
+}
+
 /* 
  =========================================================================================================================
   Button
