--- a/css/responsive.css
+++ b/css/responsive.css
@@ -381,23 +381,28 @@
 /* 
  =========================================================================================================================
   Section#notice
+  Section#news
  =========================================================================================================================
 */
 
 @media (max-width: 1400px) {
-  #notice {
+  #notice,
+  #news {
     padding: 3rem 0;
   }
 
-  #notice > i {
+  #notice > i,
+  #news > i {
     font-size: 1.5rem;
   }
 
-  #notice > p {
+  #notice > p,
+  #news > p {
     font-size: 1rem;
   }
 
-  #notice > h2 {
+  #notice > h2,
+  #news > h2 {
     font-size: 30px;
   }
 
@@ -436,15 +441,18 @@
     padding: 2rem 1rem;
   }
 
-  #notice > i {
+  #notice > i,
+  #news > i {
     font-size: 1rem;
   }
 
-  #notice > p {
+  #notice > p,
+  #news > p {
     font-size: 0.9rem;
   }
 
-  #notice > h2 {
+  #notice > h2,
+  #news > h2 {
     font-size: 24px;
   }
 
@@ -455,6 +463,65 @@
   #notice .btn {
     font-size: 0.9rem;
     padding: 0.5rem 1.3rem;
+  }
+}
+
+/* 
+ =========================================================================================================================
+  Section#news
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #news .container {
+    padding: 2rem;
+    gap: 2rem;
+  }
+
+  #news .secondary-news .card {
+    margin-bottom: 2rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #news .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  #news .container {
+    padding: 2rem 0;
+    gap: 1rem;
+  }
+
+  #news .secondary-news .card {
+    margin-bottom: 1rem;
+  }
+
+  #news .secondary-news .card {
+    flex-direction: column;
+  }
+
+  #news .primary-news .card-img-top,
+  #news .secondary-news .card-img-top {
+    height: 200px;
+  }
+
+  #news .secondary-news .card-img-top,
+  #news .secondary-news .card-body {
+    flex: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  #news .container {
+    padding: 10px;
+  }
+
+  #news .primary-news .card-img-top,
+  #news .secondary-news .card-img-top {
+    height: 200px;
   }
 }
 
