--- a/css/utility.css
+++ b/css/utility.css
@@ -55,6 +55,30 @@ section {
 
 /* 
  =========================================================================================================================
+  Scroll Bar
+ =========================================================================================================================
+*/
+
+/* ::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--theme-primary-color);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--theme-primary-light-1);
+} */
+
+/* 
+ =========================================================================================================================
   Button
  =========================================================================================================================
 */
@@ -80,4 +104,8 @@ section {
 
 .rotate-180 {
   transform: rotate(180deg);
+}
+
+.rotate-90 {
+  transform: rotate(90deg);
 }
