--- a/css/style.css
+++ b/css/style.css
@@ -142,13 +142,6 @@ header .sponsor-btn {
   transition: all 0.6s;
 }
 
-header .user-icon * {
-  /* border: 1px solid red; */
-  color: var(--theme-primary-color);
-  position: relative;
-  top: 1px;
-}
-
 header .sponsor-btn:hover {
   background: var(--theme-primary-color);
   color: #fff;
@@ -168,70 +161,113 @@ header .container > i {
 */
 
 aside {
+  background: #fff;
+  backdrop-filter: blur(15px);
+  width: 100%;
+  height: 100vh;
   position: fixed;
+  z-index: 100;
   top: 0;
   left: -100%;
-  z-index: 100;
-  width: 100%;
-  min-height: 100vh;
-  background: #fff;
-  transition: all 0.5s ease-in-out;
+  overflow-y: auto;
+  transition: 0.6s ease;
+  transition-property: left;
 }
 
 aside.active {
   left: 0;
 }
 
-aside > .container {
-  height: 70px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+aside .header {
+  position: relative;
+  width: 100%;
+  text-align: left;
+  padding: 15px 20px;
 }
 
-aside > .container .btn {
-  margin-left: auto;
-  margin-right: 2rem;
-  padding: 0.5rem 1rem;
+aside .header img {
+  height: 35px;
 }
 
-aside > .container i {
-  font-size: 1.8rem;
+aside .header a {
+  margin-right: 40px;
+}
+
+aside .close-btn {
+  position: absolute;
+  z-index: 200;
   color: var(--theme-primary-color);
+  background: rgba(255 255 255 / 20%);
+  font-size: 2.5rem;
+  right: 0;
+  line-height: 2.5rem;
+  padding: 4px 12px;
   cursor: pointer;
-  transition: all 0.2s;
 }
 
-aside > .container i:hover {
-  color: red;
+aside .buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0 23px;
 }
 
-aside img {
-  height: 40px;
+aside .buttons .sponsor-btn {
+  padding: 0 15px;
+  border-radius: 20px;
+  border: 2px solid var(--theme-primary-color);
+  color: var(--theme-primary-color);
+  transition: all 0.6s;
+  text-decoration: none;
 }
 
-aside nav {
-  padding: 3rem 0 1rem;
+aside .buttons .sponsor-btn:hover {
+  background: var(--theme-primary-color);
+  color: #fff;
 }
 
-aside nav ul {
-  list-style: none;
+aside .menu {
+  width: 100%;
+  margin-top: 20px;
 }
 
-aside nav li {
-  padding-bottom: 1.5rem;
+aside .menu .item {
+  position: relative;
+  cursor: pointer;
 }
 
-aside nav a {
+aside .menu .item a {
+  color: var(--theme-primary-color);
+  font-size: 16px;
   text-decoration: none;
   display: block;
-  color: #111;
-  width: 100%;
-  font-weight: bold;
+  padding: 5px 30px;
+  line-height: 60px;
 }
 
-aside nav li.active a {
-  color: var(--theme-primary-color);
+aside .menu .item a:hover {
+  background: #f6f6f6;
+  transition: 0.3s ease;
+}
+
+aside .menu .item i {
+  margin-right: 15px;
+}
+
+aside .menu .item a .dropdown {
+  position: absolute;
+  right: 0;
+  margin: 20px;
+  transition: 0.3s ease;
+}
+
+aside .menu .item .sub-menu {
+  background: #f9f9f9;
+  display: none;
+}
+
+aside .menu .item .sub-menu a {
+  padding-left: 80px;
 }
 
 /* 
