Code Arranged a Bit

--- a/css/utility.css
+++ b/css/utility.css
@@ -58,10 +58,9 @@ section {
   Scroll Bar
  =========================================================================================================================
 */
-/* 
+
 ::-webkit-scrollbar {
   width: auto;
-  display: none;
 }
 
 ::-webkit-scrollbar-track {
@@ -74,7 +73,7 @@ section {
 
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(0 0 0 / 50%);
-} */
+}
 
 /* 
  =========================================================================================================================
