--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1096,6 +1096,7 @@
   Section#alumni-hero
   Section#wof-hero
   Section#sponsors-hero
+  Section#news-hero
  =========================================================================================================================
 */
 
@@ -1105,7 +1106,8 @@
   #sponsor-hero p:nth-child(1),
   #alumni-hero p:nth-child(1),
   #wof-hero p:nth-child(1),
-  #sponsors-hero p:nth-child(1) {
+  #sponsors-hero p:nth-child(1),
+  #news-hero p {
     font-size: 0.9rem;
   }
 
@@ -1114,7 +1116,8 @@
   #sponsor-hero h1,
   #alumni-hero h1,
   #wof-hero h1,
-  #sponsors-hero h1 {
+  #sponsors-hero h1,
+  #news-hero h1 {
     font-size: 2.5rem;
   }
 
@@ -1138,9 +1141,14 @@
   #sponsor-hero,
   #alumni-hero,
   #wof-hero,
-  #sponsors-hero {
+  #sponsors-hero,
+  #news-hero {
     min-height: 300px;
     justify-content: center;
+  }
+
+  #news-hero p {
+    margin-top: 0;
   }
 
   #gallery-hero p:nth-child(3),
@@ -1153,12 +1161,17 @@
 }
 
 @media (max-width: 768px) {
+  #news-hero::after {
+    box-shadow: inset 0 -5rem 15rem rgba(255 255 255 / 100%);
+  }
+
   #about-hero h1,
   #gallery-hero h1,
   #sponsor-hero h1,
   #alumni-hero h1,
   #wof-hero h1,
-  #sponsors-hero h1 {
+  #sponsors-hero h1,
+  #news-hero h1 {
     font-size: 1.5rem;
   }
 
@@ -1173,7 +1186,8 @@
   #sponsor-hero,
   #alumni-hero,
   #wof-hero,
-  #sponsors-hero {
+  #sponsors-hero,
+  #news-hero {
     padding: calc(3rem + var(--header-height)) 10px 3rem;
   }
 }
@@ -2174,5 +2188,62 @@
 @media (max-width: 576px) {
   #all-notice {
     padding: 10px;
+  }
+}
+
+/* 
+ =========================================================================================================================
+  Section#all-news
+ =========================================================================================================================
+*/
+
+@media (max-width: 1400px) {
+  #all-news .news-content h5 {
+    width: 300px;
+    font-size: 1.1rem;
+  }
+
+  #all-news .news-content span {
+    font-size: 0.9rem;
+  }
+
+  #all-news .news-content a {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #all-news .news-content h5 {
+    width: 250px;
+  }
+}
+
+@media (max-width: 992px) {
+  #all-news .news-content h5 {
+    width: 430px;
+  }
+  #all-news .container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  #all-news .news-content h5 {
+    width: 280px;
+  }
+  #all-news .container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 576px) {
+  #all-news .news-box {
+    flex-direction: column;
+  }
+
+  #all-news .news-img {
+    width: 100%;
+    margin-bottom: 1rem;
+    margin-right: 0;
   }
 }
