--- a/css/style.css
+++ b/css/style.css
@@ -58,13 +58,17 @@ header .container > ul > li.active::after {
   position: absolute;
   bottom: 12px;
   left: 0;
-  width: 100%;
+  width: 30%;
   height: 4px;
   background-color: var(--theme-primary-color);
 }
 
 header .container > ul > li {
   position: relative;
+}
+
+header .container > ul > li.active > a {
+  color: var(--theme-primary-color);
 }
 
 header .container > ul > li > a {
@@ -88,16 +92,20 @@ header ul li ul {
 
 header ul li ul li {
   list-style: none;
-  padding: 10px 1rem;
+}
+
+header ul li ul li.active {
+  background: rgba(0 0 0 / 5%);
 }
 
 header ul li ul li:hover {
-  background: rgba(0 0 0 / 1%);
+  background: rgba(0 0 0 / 5%);
 }
 
 header ul li ul li a {
   display: block;
   width: 100%;
+  padding: 10px 1rem;
 }
 
 header ul li:hover ul {
@@ -3408,4 +3416,142 @@ footer a {
 #all-sponsors .container img {
   width: 100%;
   transition: all 0.5s;
+}
+
+/* 
+ =========================================================================================================================
+  Section#news-hero
+ =========================================================================================================================
+*/
+
+#news-hero {
+  min-height: 500px;
+  padding: calc(3rem + var(--header-height)) 10px 3rem;
+  background: url("../images/news-bg.jpg") no-repeat center top / cover;
+  text-align: center;
+  position: relative;
+}
+
+#news-hero::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255 255 255 / 20%);
+  box-shadow: inset 0 -20rem 30rem rgba(255 255 255 / 100%);
+}
+
+#news-hero * {
+  position: relative;
+  z-index: 2;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+}
+
+#news-hero p {
+  margin-top: 6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1rem;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 2em;
+}
+
+#news-hero h1 {
+  font-weight: 700;
+  font-size: 50px;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1.4em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#all-news
+ =========================================================================================================================
+*/
+
+#all-news {
+  padding: 1rem 10px 3rem;
+}
+
+#all-news .container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+
+#all-news .news-box {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  transition: all 0.6s;
+}
+
+#all-news .news-box:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+#all-news .news-img {
+  width: 200px;
+  margin-right: 1rem;
+}
+
+#all-news .news-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#all-news .news-content {
+  display: flex;
+  flex-direction: column;
+}
+
+#all-news .news-content h5 {
+  width: 350px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #555;
+  font-weight: 500;
+}
+
+#all-news .news-content span {
+  color: var(--theme-primary-color);
+  font-weight: 500;
+}
+
+#all-news .news-content a {
+  background: transparent;
+  color: var(--theme-primary-color);
+  font-weight: normal;
+  width: auto;
+  margin-top: auto;
+  align-self: flex-start;
+}
+
+#all-news .news-content a:hover {
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+
+#all-news .container.load-more-btn {
+  padding: 4rem 10px 2rem;
+  display: flex;
+  place-content: center;
+  place-items: center;
+}
+
+#all-news .container.load-more-btn .btn {
+  background: transparent;
+  color: var(--theme-primary-color);
+  font-weight: normal;
+}
+
+#all-news .container.load-more-btn .btn:hover {
+  text-decoration: underline;
+  text-underline-offset: 10px;
 }
