Scrollbar Made Defaulkt

--- a/css/utility.css
+++ b/css/utility.css
@@ -59,7 +59,7 @@ section {
  =========================================================================================================================
 */
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 12px;
 }
 
@@ -73,7 +73,7 @@ section {
 
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(0 0 0 / 40%);
-}
+} */
 
 /* 
  =========================================================================================================================
