--- a/css/style.css
+++ b/css/style.css
@@ -3555,3 +3555,145 @@ footer a {
   text-decoration: underline;
   text-underline-offset: 10px;
 }
+
+/* 
+ =========================================================================================================================
+  Section#news-read-hero
+ =========================================================================================================================
+*/
+
+#news-read-hero {
+  min-height: 400px;
+  padding: calc(3rem + var(--header-height)) 10px 3rem;
+  background: url("https://source.unsplash.com/1600x900/?reporter") no-repeat
+    center center / cover;
+  text-align: center;
+  position: relative;
+}
+
+#news-read-hero::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255 255 255 / 20%);
+  box-shadow: inset 0 -20rem 30rem rgba(255 255 255 / 100%),
+    inset 0 10rem 20rem rgba(255 255 255 / 100%);
+}
+
+#news-read-hero * {
+  position: relative;
+  z-index: 2;
+  font-family: "Rubik", Helvetica, Arial, Lucida, sans-serif;
+}
+
+#news-read-hero p {
+  margin-top: 3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1rem;
+  color: var(--theme-primary-color);
+  letter-spacing: 5px;
+  line-height: 2em;
+}
+
+#news-read-hero h1 {
+  font-weight: 700;
+  font-size: 50px;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1.4em;
+}
+
+/* 
+ =========================================================================================================================
+  Section#news-detail
+ =========================================================================================================================
+*/
+
+#news-detail {
+  padding: 1rem 0 3rem;
+}
+
+#news-detail .container {
+  display: grid;
+  grid-template-columns: 7fr 3fr;
+  grid-gap: 2rem;
+}
+
+#news-detail .left {
+  background: #f6f6f6;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+#news-detail .left h2 {
+  font-family: "Rubik", Arial, Helvetica, sans-serif;
+  color: #111;
+}
+
+#news-detail .left span {
+  display: block;
+  font-size: 1rem;
+  padding-left: 10px;
+  font-weight: 500;
+  color: #999;
+}
+
+#news-detail .left img {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+}
+
+/* Content */
+
+#news-detail .left .content {
+  line-height: 2;
+  font-size: 1rem;
+  color: #444;
+  text-align: left;
+}
+
+#news-detail .left .container img {
+  width: 100%;
+  padding: 10px 0;
+}
+
+/* Right */
+
+#news-detail .right h2 {
+  font-family: "Rubik", Arial, Helvetica, sans-serif;
+  color: #777;
+}
+
+#news-detail a.news-box {
+  display: block;
+  background: #f9f9f9;
+  text-decoration: none;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+
+#news-detail a.news-box img {
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+#news-detail a.news-box p {
+  display: block;
+  color: #444;
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-bottom: 5px;
+}
+
+#news-detail a.news-box span {
+  display: block;
+  padding-left: 5px;
+  color: #888;
+  font-size: 0.9rem;
+}
