--- a/css/style.css
+++ b/css/style.css
@@ -3697,3 +3697,92 @@ footer a {
   color: #888;
   font-size: 0.9rem;
 }
+
+/* 
+ =========================================================================================================================
+  Section#add-staff-form
+ =========================================================================================================================
+*/
+
+#add-staff-form {
+  padding: calc(3rem + var(--header-height)) 0 3rem;
+  background: url("../images/shapes-bg.png") repeat center center/contain;
+}
+
+#add-staff-form form {
+  background: #f5f4fa;
+  color: #29292b;
+  padding: 2rem 1rem;
+  width: 100%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  border-radius: 10px;
+}
+
+#add-staff-form form h2 {
+  color: #2c2c2e;
+  font-weight: 700;
+  font-family: sans-serif;
+  font-size: 2rem;
+  letter-spacing: 1.5px;
+  padding-bottom: 1rem;
+}
+
+#add-staff-form article {
+  border-top: 2px solid #ccc;
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  gap: 2rem;
+}
+
+#add-staff-form article div:nth-child(1) h3 {
+  font-size: 1.2rem;
+  color: #333;
+}
+
+#add-staff-form article div:nth-child(1) p {
+  font-size: 1rem;
+  color: #666;
+  width: 90%;
+}
+
+#add-staff-form form :is(label, input, textarea, select, option) {
+  box-sizing: border-box;
+  display: block;
+  font-size: 0.9rem;
+  width: 90%;
+}
+
+#add-staff-form form :is(input, textarea, select, option) {
+  padding: 6px 13px;
+  margin-bottom: 1rem;
+}
+
+#add-staff-form form > div {
+  text-align: right;
+}
+
+#add-staff-form form :is(button[type="submit"], button[type="reset"]) {
+  padding: 0.4rem 1.4rem;
+  margin-right: 0.5rem;
+  border-radius: 5px;
+  background: transparent;
+  font-weight: 500;
+  font-size: 0.9rem;
+  border: 3px solid var(--theme-primary-color);
+  transform: scale(0.95);
+}
+
+#add-staff-form form :is(button[type="submit"], button[type="reset"]):hover {
+  transform: scale(1);
+}
+
+#add-staff-form form button[type="reset"] {
+  color: var(--theme-primary-color);
+}
+
+#add-staff-form form button[type="submit"] {
+  background: var(--theme-primary-color);
+  color: #fff;
+}
