--- a/css/style.css
+++ b/css/style.css
@@ -3757,6 +3757,12 @@ footer a {
 #add-staff-form form :is(input, textarea, select, option) {
   padding: 6px 13px;
   margin-bottom: 1rem;
+  border-radius: 10px;
+  border: 2px solid #ccc;
+}
+
+#add-staff-form form input[type="file"] {
+  border: unset;
 }
 
 #add-staff-form form > div {
